# crm

./: .env  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  MVP-ТЗ.md  README.md  docker-compose.yml
backend/: .dockerignore  AGENTS.md  Crm.slnx  Dockerfile  GymCrm.slnx
backlog/: README.md
bot/: .dockerignore  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
bot/src/gym_crm_bot/: __init__.py  app.py  config.py  logging.py  main.py
bot/src/gym_crm_bot/core/: __init__.py  idempotency.py  service.py
bot/src/gym_crm_bot/crm/: __init__.py  client.py  errors.py  models.py
bot/src/gym_crm_bot/resources/: __init__.py  callbacks.py  keyboards.py  messages.py
bot/src/gym_crm_bot/storage/: __init__.py  db.py  models.py  repositories.py
bot/src/gym_crm_bot/storage/alembic/: env.py
bot/src/gym_crm_bot/storage/alembic/versions/: 202604241820_create_bot_tables.py
bot/src/gym_crm_bot/telegram/: __init__.py  adapter.py  factory.py  middleware.py  mtproto_adapter.py  mtproxy.py  normalization.py
bot/tests/: test_bot_service.py  test_callbacks_and_menu.py  test_config.py  test_crm_client.py  test_mtproxy.py  test_storage.py
deploy/: .env.example  AGENTS.md  docker-compose.yml
docs/: AGENT_ROUTING.md  AUTH_SCREEN_REDESIGN_PLAN.md  BOT-МЕССЕНДЖЕР-ТЗ.md  CLIENTS_WINDOW_IMPROVEMENT_PLAN.md  CLIENTS_WINDOW_TARGET_MOCKUP.html  CLIENTS_WINDOW_TARGET_MOCKUP_V2.html  CLIENTS_WINDOW_TARGET_MOCKUP_V3.html  CLIENTS_WINDOW_TARGET_MOCKUP_V3_PHOTO.html  CLIENTS_WINDOW_TARGET_MOCKUP_V4.html  CLIENTS_WINDOW_TARGET_MOCKUP_V5.html  CLIENTS_WINDOW_TARGET_MOCKUP_V6.html  (+13 more)
(+417 files in other folders)
