[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "gym-crm-bot"
version = "0.1.0"
description = "Telegram bot runtime for Gym CRM."
readme = "AGENTS.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.17.0,<4.0.0",
  "aiohttp-socks>=0.10.1,<1.0.0",
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<0.29.0",
  "pydantic-settings>=2.9.0,<3.0.0",
  "SQLAlchemy>=2.0.41,<3.0.0",
  "Telethon>=1.41.0,<2.0.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0,<0.22.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<0.26.0",
  "respx>=0.22.0,<0.23.0",
  "ruff>=0.11.0,<0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gym_crm_bot"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
